# fast_body_tracker

./: .gitignore  README.md  pyproject.toml
.github/workflows/: publish.yml
examples/: body_segmentation.py  body_tracking.py  body_tracking_color_camera.py  color_image.py  color_image_to_depth_with_overlay.py  color_point_cloud.py  color_to_depth_image.py  color_to_depth_image_with_overlay.py  depth_as_color_image_overlay.py  depth_image.py  depth_to_color_image.py  depth_to_color_image_overlay.py  exampleBodySegmentation.py  exampleBodyTracking.py  exampleBodyTrackingColorCamera.py  exampleBodyTrackingLiteModel.py  exampleBodyTrackingTransformationComparison.py  exampleColorImage.py  exampleColorPointCloud.py  exampleDepthImage.py  exampleInfraredImage.py  examplePlayback.py  examplePlaybackBodyTracker.py  examplePointCloud.py  exampleRealTimeIMU.py  exampleRecording.py  exampleSmoothDepthImage.py  exampleTransformColorToDepth.py  exampleTransformPoint2DTo3D.py  external_calibration.py  imu_graph.py  infrared_image.py  multi_camera_body_tracking.py  point_cloud.py
notebooks/: hdf5_analysis.ipynb  joints-calibration-analysis.ipynb  synchronization-analysis.ipynb
pykinect_azure/: __init__.py  _initializer.py  initializer.py  pykinect.py
pykinect_azure/k4a/: __init__.py  _k4a.py  _k4a_types.py  _k4atypes.py  calibration.py  capture.py  configuration.py  device.py  image.py  imu_sample.py  k4atypes.py  ka_const.py  transformation.py  visualizer.py
pykinect_azure/k4abt/: __init__.py  _k4abt.py  _k4abtTypes.py  _k4abt_types.py  body.py  body2d.py  frame.py  joint.py  joint2d.py  kabt_const.py  tracker.py  tracker_configuration.py  trackerconfiguration.py
pykinect_azure/k4arecord/: _k4arecord.py
pykinect_azure/utils/: postProcessing.py  utils.py  visualizer.py
scripts/: check_calibration.py  external_calibration.py  hdf5_converter.py  hdf5_converter_old.py  multi_camera_body_tracking.py  save_charuco_boards.py  show_cameras_positions.py  visualize_body.py
src/fast_body_tracker/: __init__.py  data_capture_pipeline.py  initializer.py
src/fast_body_tracker/calibration/: __init__.py  charuco_board.py  check_calibration.py  external_calibration.py
src/fast_body_tracker/k4a/: __init__.py  _k4a.py  _k4a_types.py  calibration.py  capture.py  configuration.py  device.py  image.py  imu_sample.py  transformation.py
src/fast_body_tracker/k4abt/: __init__.py  _k4abt.py  _k4abt_types.py  body.py  frame.py  kabt_const.py  tracker.py  tracker_configuration.py
src/fast_body_tracker/k4arecord/: __init__.py  _k4arecord.py  _k4arecordTypes.py  datablock.py  playback.py  record.py  record_configuration.py
src/fast_body_tracker/pipeline/: __init__.py  check_calibration.py  data_capture_pipeline.py  show_cameras_positions.py  show_devices.py
src/fast_body_tracker/utils/: __init__.py
src/fast_body_tracker/visualizer/: __init__.py  offline_visualizer.py  online_visualizer.py
src/pykinect_azure/: __init__.py  initializer.py
src/pykinect_azure/k4a/: _k4a.py  _k4a_types.py  calibration.py  capture.py  configuration.py  device.py  image.py  imu_sample.py  transformation.py
src/pykinect_azure/k4abt/: __init__.py  _k4abt.py  _k4abt_types.py  body.py  body2d.py  frame.py  kabt_const.py  tracker.py  tracker_configuration.py
src/pykinect_azure/k4arecord/: _k4arecord.py  _k4arecordTypes.py  datablock.py  playback.py  record.py  record_configuration.py
src/pykinect_azure/utils/: __init__.py  framerate_calculator.py  visualizer.py
tests/: test_ctype_types.py
