[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fast_body_tracker"
version = "0.1.0"
description = "Fast depth camera body tracker."
requires-python = ">=3.10"
authors = [{name = "Ibai Gorordo" }, {name = "Elia Balugani" }]
license = "MIT"

dependencies = [
    "opencv-python>=4.11.0.86",
    "av>=16.1.0",
    "numpy>=2.2.6",
    "pyside6>=6.10.1",
    "vispy>=0.16.1",
    "matplotlib>=3.10.8",
    "h5py>=3.15.1",
    "jupyterlab>=4.5.2",
    "pynput>=1.8.1"
]

classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Topic :: Scientific/Engineering :: Image Recognition",
    "Topic :: Scientific/Engineering :: Human Machine Interfaces",
    "Topic :: Scientific/Engineering :: Visualization",
]

[tool.uv]
managed = true
package = true

[tool.hatch.build.targets.wheel]
packages = ["src/fast_body_tracker"]
exclude = ["/examples", "/notebooks", "/scripts"]

[tool.hatch.build.targets.sdist]
exclude = ["/scripts"]
