[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fast_body_tracker"
version = "0.1.0"
description = "Fast depth camera body tracker."
requires-python = ">=3.12"
authors = [{name = "Ibai Gorordo" }, {name = "Elia Balugani" }]
license = "MIT"

dependencies = [
    "opencv-python",
    "av",
    "numpy",
    "pyside6",
    "vispy",
    "matplotlib",
    "h5py",
    "pynput"
]

classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Topic :: Scientific/Engineering :: Image Recognition",
    "Topic :: Scientific/Engineering :: Human Machine Interfaces",
    "Topic :: Scientific/Engineering :: Visualization",
]

[project.optional-dependencies]
notebook = [
    "ipympl",
    "jupyterlab",
]

[tool.uv]
managed = true
package = true

[tool.hatch.build.targets.wheel]
packages = ["src/fast_body_tracker"]

[tool.hatch.build.targets.sdist]
include = ["/src"]
exclude = ["/examples", "/notebooks", "/scripts"]
