[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fast_body_tracker"
version = "0.1.0"
description = "Fast depth camera body tracker."
authors = [{name = "Ibai Gorordo" }, {name = "Elia Balugani" }]
license = "MIT"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Topic :: Scientific/Engineering :: Image Recognition",
    "Topic :: Scientific/Engineering :: Human Machine Interfaces",
    "Topic :: Scientific/Engineering :: Visualization",
]

requires-python = ">=3.12"
dependencies = [
    "opencv-python",
    "av",
    "numpy",
    "pyside6",
    "vispy",
    "matplotlib",
    "h5py",
    "pynput"
]
[dependency-groups]
dev = [
    "ruff",
    "pytest",
    "pytest-cov"
]

[project.optional-dependencies]
notebook = [
    "ipympl",
    "jupyterlab",
]

[tool.hatch.build.targets.wheel]
packages = ["src/fast_body_tracker"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--tb=short -q"

[tool.hatch.build.targets.sdist]
include = ["/src"]

[tool.uv]
default-groups = ["dev"]
managed = true
package = true
